--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -50,8 +50,8 @@
                   {{user.name}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/profile">Thông tin cá nhân</a>
-                  <a class="dropdown-item" href="/logout">Đăng xuất</a>
+                  <a class="dropdown-item" href="/userInfo">User Info</a>
+                  <a class="dropdown-item" href="/logout">Log out</a>
                 </div>
               </li>
               {{else }}
