render list package

--- a/views/price/pricing.hbs
+++ b/views/price/pricing.hbs
@@ -30,54 +30,18 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-lg-3 col-sm-6">
+            {{#each  listKey}}
+                <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="single_pricing_part">
                     <img src="img/icon/feature_icon_1.png" alt="">
-                    <p>business</p>
-                    <h3>$50.00 <span>/ mo</span></h3>
+                    <p>{{name}}</p>
+                    <h3>{{price}}VND<span>/{{term}}</span></h3>
                     <ul>
-                        <li>2GB Bandwidth</li>
-                        <li>Two Account</li>
-                        <li>15GB Storage</li>
-                        <li>Sale After Service</li>
-                        <li>3 Host Domain</li>
-                        <li>24/7 Support</li>
                     </ul>
                     <a href="#" class="btn_1">Choose Plane</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="single_pricing_part">
-                    <img src="img/icon/feature_icon_2.png" alt="">
-                    <p>business</p>
-                    <h3>$60.00 <span>/ mo</span></h3>
-                    <ul>
-                        <li>2GB Bandwidth</li>
-                        <li>Two Account</li>
-                        <li>15GB Storage</li>
-                        <li>Sale After Service</li>
-                        <li>3 Host Domain</li>
-                        <li>24/7 Support</li>
-                    </ul>
-                    <a href="#" class="btn_1">Choose Plane</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="single_pricing_part">
-                    <img src="img/icon/feature_icon_3.png" alt="">
-                    <p>business</p>
-                    <h3>$80.00 <span>/ mo</span></h3>
-                    <ul>
-                        <li>2GB Bandwidth</li>
-                        <li>Two Account</li>
-                        <li>15GB Storage</li>
-                        <li>Sale After Service</li>
-                        <li>3 Host Domain</li>
-                        <li>24/7 Support</li>
-                    </ul>
-                    <a href="#" class="btn_1">Choose Plane</a>
-                </div>
-            </div>
+            {{/each}}
         </div>
     </div>
     <img src="img/left_sharp.png" alt="" class="left_shape_1">
