fix update user info + changepassword

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -50,7 +50,7 @@
                   {{user.name}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/userInfo">User Info</a>
+                  <a class="dropdown-item" href="/profile">User Info</a>
                   <a class="dropdown-item" href="/logout">Log out</a>
                 </div>
               </li>
