--- a/views/userInfo/userInfo.hbs
+++ b/views/userInfo/userInfo.hbs
@@ -9,7 +9,7 @@
                 <div class="breadcrumb_iner text-center">
                     <div class="breadcrumb_iner_item">
                         <h2 class="userInfo">User Information</h2>
-                        <form>
+                        <form method="POST">
                             <div class="formElement">
                                 <label style="float: left;" for="username">Your email</label>
                                 <input style="background-color: cadetblue;" id="username" value="{{user.email}}" readonly type="text" placeholder="Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" required class="single-input">
@@ -23,7 +23,7 @@
                             </div>
                             {{#if (if_eq user.role "user")}}
                                 <div class="formElement">
-                                    <button class="btn_2 banner_btn_2 saveInfo" placeholder="Change password" value="">Change password</button>
+                                    <a href="/recoverPassword" class="btn_2 banner_btn_2 saveInfo" placeholder="Change password" value="">Change password</a>
                                 </div>
                             {{/if}}
                         </form>
