--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <!-- own style CSS -->
   <link rel="stylesheet" href="/css/khaleo.css">
+  <link rel="stylesheet" href="/css/huy.css">
 
   <style>
 
@@ -39,7 +40,7 @@
   {{!-- <section class="banner_part"> --}}
   {{{body}}}
   {{!-- </section> --}}
-  
+
   <!-- jquery plugins here-->
   <!-- jquery -->
   <script src="/js/jquery-1.12.1.min.js"></script>
