--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -19,8 +19,10 @@
             </div>
 
             <div class="col-lg-5 signupform">
+
                 <div class="banner_img d-none d-lg-block">
                     <form class="inputform" action="/login" method="POST">
+                        <img class="logo" src="/img/logo.png" alt="logo">
                         <div class="mt-10">
                             <input type="email" name="email" placeholder="Your email" onfocus="this.placeholder"
                                 onblur="this.placeholder" required class="single-input">
@@ -37,7 +39,7 @@
                             <a href="/forgotPassword">Forgot password?</a>
                         </div>
                         <div class="mt-30">
-                            <label>Or login with</label>
+                            <label style="color: white;">Or login with</label>
                             <div class="group-social-button">
                                 <a href="./login/auth/google" class="btn_2 banner_btn_2 signupBtn" placeholder="Google"
                                     value="Google">
@@ -53,7 +55,7 @@
                         </div>
 
                         <div class="signUp-direct">
-                            <a style="color: #8a8787b7;">Not a member? <a href="/register">Sign up now</a></a>
+                            <a style="color: white;">Not a member? <a href="/register">Sign up now</a></a>
                         </div>
                     </form>
                     <br>
