--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -16,7 +16,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/price">pricing</a>
               </li>
-              <li class="nav-item dropdown">
+              {{!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Blog
@@ -25,8 +25,8 @@
                   <a class="dropdown-item" href="blog.html"> blog</a>
                   <a class="dropdown-item" href="single-blog.html">Single blog</a>
                 </div>
-              </li>
-              <li class="nav-item dropdown">
+              </li> --}}
+              {{!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   pages
@@ -34,10 +34,10 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                   <a class="dropdown-item" href="elements.html">Elements</a>
                 </div>
-              </li>
-              <li class="nav-item">
+              </li> --}}
+              {{!-- <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
-              </li>
+              </li> --}}
             </ul>
           </div>
           <div class="collapse navbar-collapse main-menu-item main-menu-item-user" id="userInfo">
