--- a/views/userInfo/userInfo.hbs
+++ b/views/userInfo/userInfo.hbs
@@ -12,19 +12,25 @@
                         <form>
                             <div class="formElement">
                                 <label style="float: left;" for="username">Your email</label>
-                                <input style="background-color: cadetblue;" id="username" value="{{user.email}}" readonly type="text" placeholder="Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" required class="single-input">
+                                <input style="background-color: antiquewhite;" id="username" value="{{user.email}}"
+                                    readonly type="text" placeholder="Name" onfocus="this.placeholder = ''"
+                                    onblur="this.placeholder = 'Email'" required class="single-input">
                             </div>
                             <div class="formElement">
                                 <label style="float: left;" for="username">Your name</label>
-                                <input id="username" name="name" value="{{user.name}}" type="text" placeholder="Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required class="single-input">
+                                <input id="username" name="name" value="{{user.name}}" type="text" placeholder="Name"
+                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
+                                    class="single-input">
                             </div>
                             <div class="formElement">
-                                <button type="submit" class="btn_2 banner_btn_2 saveInfo" placeholder="Save" value="">Save</button>
+                                <button type="submit" class="btn_2 banner_btn_2 saveInfo" placeholder="Save"
+                                    value="">Save</button>
                             </div>
                             {{#if (if_eq user.role "user")}}
-                                <div class="formElement">
-                                    <button class="btn_2 banner_btn_2 saveInfo" placeholder="Change password" value="">Change password</button>
-                                </div>
+                            <div class="formElement">
+                                <button class="btn_2 banner_btn_2 saveInfo" placeholder="Change password"
+                                    value="">Change password</button>
+                            </div>
                             {{/if}}
                         </form>
                     </div>
@@ -35,92 +41,4 @@
 </section>
 <!-- breadcrumb start-->
 
-<!-- pricing part start-->
-<section class="pricing_part section_padding single_page_pricing">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6">
-                <div class="section_tittle text-center">
-                    <h2>Simple Pricing</h2>
-                    <p>Life firmament under them evening make after called dont
-                        saying likeness isn't wherein also forth she'd air two without</p>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-3 col-sm-6">
-                <div class="single_pricing_part">
-                    <img src="img/icon/feature_icon_1.png" alt="">
-                    <p>business</p>
-                    <h3>$50.00 <span>/ mo</span></h3>
-                    <ul>
-                        <li>2GB Bandwidth</li>
-                        <li>Two Account</li>
-                        <li>15GB Storage</li>
-                        <li>Sale After Service</li>
-                        <li>3 Host Domain</li>
-                        <li>24/7 Support</li>
-                    </ul>
-                    <a href="#" class="btn_1">Choose Plane</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="single_pricing_part">
-                    <img src="img/icon/feature_icon_2.png" alt="">
-                    <p>business</p>
-                    <h3>$60.00 <span>/ mo</span></h3>
-                    <ul>
-                        <li>2GB Bandwidth</li>
-                        <li>Two Account</li>
-                        <li>15GB Storage</li>
-                        <li>Sale After Service</li>
-                        <li>3 Host Domain</li>
-                        <li>24/7 Support</li>
-                    </ul>
-                    <a href="#" class="btn_1">Choose Plane</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="single_pricing_part">
-                    <img src="img/icon/feature_icon_3.png" alt="">
-                    <p>business</p>
-                    <h3>$80.00 <span>/ mo</span></h3>
-                    <ul>
-                        <li>2GB Bandwidth</li>
-                        <li>Two Account</li>
-                        <li>15GB Storage</li>
-                        <li>Sale After Service</li>
-                        <li>3 Host Domain</li>
-                        <li>24/7 Support</li>
-                    </ul>
-                    <a href="#" class="btn_1">Choose Plane</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <img src="img/left_sharp.png" alt="" class="left_shape_1">
-    <img src="img/animate_icon/Shape-1.png" alt="" class="feature_icon_1">
-    <img src="img/animate_icon/shape.png" alt="" class="feature_icon_4">
-</section>
-<!-- pricing part end-->
-
-
-<!-- cta part start-->
-<section class="cta_part section_padding">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8 col-xl-6">
-                <div class="cta_text text-center">
-                    <h2>Very useful Friendly</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
-                    <a href="#" class="btn_2 banner_btn_1">Get Started </a>
-                    <a href="#" class="btn_2 banner_btn_2">Sign up for free </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- cta part end-->
 {{>footer}}
