update authenticate old password when want to change password

--- a/views/passwordforgot/newPassword.hbs
+++ b/views/passwordforgot/newPassword.hbs
@@ -3,6 +3,7 @@
 {{>header user=this.user}}
 <script>
     let info = "{{ this.info.message }}"
+    
     if (info) alert(info)
 </script>
 <section class="banner_part login-section">
@@ -24,11 +25,20 @@
                     <h3>Input your new password</h3>
                     <h6>You can reset password here</h6>
                     <form class="inputform" action="/recoverPassword" method="POST">
+                        {{#if user}}
+                            <div class="mt-10">
+                            <input type="password" name="old_password" id="old_password" placeholder="Old Password"
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Old Password'" required minlength="6"
+                                class="single-input">
+                        </div>
+                        {{else}}
                         <div class="mt-10">
                             <input readonly="true" value="{{email}}" type="text" name="email" id="email" 
                                 onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required minlength="6"
                                 class="single-input">
                         </div>
+                         {{/if}}
+
                         <div class="mt-10">
                             <input type="password" name="password" id="password" placeholder="Password"
                                 onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required minlength="6"
@@ -36,7 +46,7 @@
                         </div>
                         <div class="mt-10">
                             <input type="password"  id="confirm_password"
-                                placeholder="Confirm Password'" onfocus="this.placeholder = ''"
+                                placeholder="Confirm Password" onfocus="this.placeholder = ''"
                                 onblur="this.placeholder = 'Confirm Password'"
                                 onkeyup="checkPass()" required class="single-input">
                         <div class="group-social-button">
