--- a/views/callAPI/callapi.hbs
+++ b/views/callAPI/callapi.hbs
@@ -15,7 +15,10 @@
                                 sed do eiusmod tempor incididunt ut labore et dolore magna
                                 aliqua. Ut enim ad minim veniam.</p>
                             <a href="#" class="btn_2 banner_btn_1">Get Started </a>
-                            <a href="/register" class="btn_2 banner_btn_2">Sign up for free </a>
+                            {{#if user}}
+                            {{else}}
+                                <a href="/register" class="btn_2 banner_btn_2">Sign up for free </a>
+                            {{/if}}
                         </div>
                     </div>
                 </div>
