--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,10 @@
                     <div class="banner_text_iner">
                         <h1>It's so easy to convert your voice to document</h1>
                         <a href="/transcribe" class="btn_2 banner_btn_1">Watch Our Demo </a>
+                        {{#if user}}
+                        {{else}}
                         <a href="/register" class="btn_2 banner_btn_2">Sign up for free </a>
+                        {{/if}}
                     </div>
                 </div>
             </div>
@@ -62,7 +65,10 @@
                     <h2>Easy to Use in different language</h2>
                     <p>Our API can use in Java, .NET, iOS, Android ..</p>
                     <a href="/transcribe" class="btn_1">Watch our demo</a>
-                    <a href="/register" class="btn_2">Sign up for free</a>
+                    {{#if user}}
+                    {{else}}
+                    <a href="/register" class="btn_2 banner_btn_2">Sign up for free </a>
+                    {{/if}}
                 </div>
             </div>
         </div>
