--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="/apidoc">API Doc</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/price">pricing</a>
+                <a class="nav-link" href="/packages">pricing</a>
               </li>
               {{!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button"
