--- a/public/css/huy.css
+++ b/public/css/huy.css
@@ -11,3 +11,76 @@
   border-radius: 10px;
   width: 90%;
 }
+
+.use_sasu {
+  margin-top: 100px;
+}
+
+.banner_part .banner_text .banner_text_iner {
+  padding-top: 150px;
+  vertical-align: unset;
+}
+
+.signupform {
+  margin-top: 160px;
+  width: 40px;
+}
+
+.single-input {
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: 80%;
+  border-radius: 20px;
+  border-style: none;
+}
+
+.signupBtn {
+  display: block;
+  margin: 0 auto;
+  border-radius: 20px;
+  text-align: center;
+  width: 40%;
+  height: 20px;
+}
+
+.banner_part {
+  height: 800px;
+}
+
+.landing {
+  background-color: whitesmoke;
+  padding: 10px;
+  border-radius: 20px;
+  width: 40%;
+}
+
+.inputform {
+  border: 1px solid whitesmoke;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.logo {
+  width: 150px;
+  padding: 5px;
+  margin: 0 auto;
+}
+
+@media (max-width: 576px) {
+  .logo {
+    max-width: 100px;
+    padding: 2px;
+  }
+}
+
+.section_tittle p {
+  text-transform: none;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.api-title {
+  text-align: center !important;
+}
