--- a/views/apidocument/apipage.hbs
+++ b/views/apidocument/apipage.hbs
@@ -2,82 +2,7 @@
 <!-- banner part start-->
 {{>header user=this.user}}
 <style>
-    .use_sasu {
-        margin-top: 100px;
-    }
-
-    .banner_part .banner_text .banner_text_iner {
-        padding-top: 150px;
-        vertical-align: unset;
-    }
-
-    .signupform {
-        margin-top: 160px;
-        width: 40px;
-    }
-
-    .single-input {
-
-        margin: 0 auto;
-        margin-bottom: 10px;
-        width: 80%;
-        border-radius: 20px;
-        border-style: none;
-    }
-
-    .signupBtn {
-        display: block;
-        margin: 0 auto;
-        border-radius: 20px;
-        text-align: center;
-        width: 40%;
-        height: 20px;
-    }
-
-    .banner_part {
-        height: 800px;
-    }
-
-    .landing {
-        background-color: whitesmoke;
-        padding: 10px;
-        border-radius: 20px;
-        width: 40%;
-
-    }
-
-    .inputform {
-        border: 1px solid whitesmoke;
-        padding: 20px;
-        border-radius: 20px;
-
-
-    }
-
-    .logo {
-        width: 150px;
-        padding: 5px;
-        margin: 0 auto;
-    }
-
-    @media (max-width: 576px) {
-        .logo {
-            max-width: 100px;
-            padding: 2px;
-        }
-    }
-
-    .section_tittle p {
-        text-transform: none
-    }
-
-    .text-center {
-        text-align: left !important;
-    }
-
-    .api-title {
-        text-align: center !important;
-    }
+  
 </style>
 
 
@@ -113,20 +38,19 @@
                     </section>
 
 
-                    <h3> b6907d289e10d714a6e88b30761fae22</h3>
+                    <h3> 80b0ea81c5d811d0763442e434ac2625</h3>
                     <h5>Description:</h5>
-                    <p> You can call by URL. API responds with JSON with URL of text if success</p>
+                    <p> You can call by URL. API responds with JSON data</p>
                     <!-- <div class="info-board info-board-blue">
                              <p>API response. <a href="http://samples.openweathermap.org/data/2.5/forecast?q=M%C3%BCnchen,DE&amp;appid=b6907d289e10d714a6e88b30761fae22" target="blank ">Example</a></p>
                         </div> -->
                     <h5>API call:</h5>
-                    <p>api.abcvoice.org/data?apikey={API Key}&url={URL}</p>
-                    <h5>Parameters:</h5>
-                    <p><b>apikey </b>Your API Key</p>
-                    <p><b>url </b>Your URL link to your voice file</p>
+                    <p>api.abcvoice.org/abcvoiceapi/uploadfile</p>
+                    <h5>Using FormData</h5>
+                    <p><b>apiKey </b>Your API Key</p>
+                    <p><b>myFile </b>Your Wav file</p>
                     <h5>Examples of API calls:</h5>
-                    <p text-align="left"><a href=""
-                            target="_blank">api.abcvoice.org/data?apikey=jsdngIphdnYTDVmjchmmsb&url=soundcloud.com/nuocmatemlaubangtinhyeumoi</a>
+                    <p text-align="left"><a href="" target="_blank">api.abcvoice.org/abcvoiceapi/uploadfile</a>
 
 
                         <section id="cityid"></section>
