--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
                 <div class="banner_text">
                     <div class="banner_text_iner">
                         <h1>It's so easy to convert your voice to document</h1>
-                        <a href="/transcribe" class="btn_2 banner_btn_1">Watch Our Demo </a>
+                        <a href="/demo" class="btn_2 banner_btn_1">Watch Our Demo </a>
                         {{#if user}}
                         {{else}}
                         <a href="/register" class="btn_2 banner_btn_2">Sign up for free </a>
@@ -64,7 +64,7 @@
                 <div class="about_us_text">
                     <h2>Easy to Use in different language</h2>
                     <p>Our API can use in Java, .NET, iOS, Android ..</p>
-                    <a href="/transcribe" class="btn_1">Watch our demo</a>
+                    <a href="/demo" class="btn_1">Watch our demo</a>
                     {{#if user}}
                     {{else}}
                     <a href="/register" class="btn_2 banner_btn_2">Sign up for free </a>
