update giao diện và route

--- a/views/apidocument/apipage.hbs
+++ b/views/apidocument/apipage.hbs
@@ -2,7 +2,7 @@
 <!-- banner part start-->
 {{>header user=this.user}}
 <style>
-  
+
 </style>
 
 
@@ -45,12 +45,12 @@
                              <p>API response. <a href="http://samples.openweathermap.org/data/2.5/forecast?q=M%C3%BCnchen,DE&amp;appid=b6907d289e10d714a6e88b30761fae22" target="blank ">Example</a></p>
                         </div> -->
                     <h5>API call:</h5>
-                    <p>api.abcvoice.org/abcvoiceapi/uploadfile</p>
+                    <p>{{window.location.hostname}}/abcvoiceapi</p>
                     <h5>Using FormData</h5>
                     <p><b>apiKey </b>Your API Key</p>
                     <p><b>myFile </b>Your Wav file</p>
                     <h5>Examples of API calls:</h5>
-                    <p text-align="left"><a href="" target="_blank">api.abcvoice.org/abcvoiceapi/uploadfile</a>
+                    <p text-align="left"><a href="" target="_blank">{{window.location.hostname}}/abcvoiceapi/</a>
 
 
                         <section id="cityid"></section>
