--- a/views/apidocument/apipage.hbs
+++ b/views/apidocument/apipage.hbs
@@ -1,14 +1,6 @@
 {{>header user=this.user}}
 <!-- banner part start-->
 {{>header user=this.user}}
-<style>
-
-</style>
-
-
-
-
-
 <!-- breadcrumb start-->
 <section class="breadcrumb breadcrumb_bg">
     <div class="container">
@@ -38,19 +30,19 @@
                     </section>
 
 
-                    <h3> 80b0ea81c5d811d0763442e434ac2625</h3>
+                    <h3> 80b0ea81c5d811d0k763442e434ac2625</h3>
                     <h5>Description:</h5>
-                    <p> You can call by URL. API responds with JSON data</p>
+                    <p> API responds with JSON data</p>
                     <!-- <div class="info-board info-board-blue">
                              <p>API response. <a href="http://samples.openweathermap.org/data/2.5/forecast?q=M%C3%BCnchen,DE&amp;appid=b6907d289e10d714a6e88b30761fae22" target="blank ">Example</a></p>
                         </div> -->
                     <h5>API call:</h5>
-                    <p>{{window.location.hostname}}/abcvoiceapi</p>
-                    <h5>Using FormData</h5>
+                    <p>https://abc-voice.herokuapp.com/abcvoiceapi</p>
+                    <h5>Parameters</h5>
                     <p><b>apiKey </b>Your API Key</p>
-                    <p><b>myFile </b>Your Wav file</p>
+                    <p><b>myFile </b>Your Wav file at 16000Hz</p>
                     <h5>Examples of API calls:</h5>
-                    <p text-align="left"><a href="" target="_blank">{{window.location.hostname}}/abcvoiceapi/</a>
+                    <p text-align="left"><a href="" target="_blank">https://abc-voice.herokuapp.com/abcvoiceapi/</a>
 
 
                         <section id="cityid"></section>
