--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,8 +26,7 @@
   <!-- style CSS -->
   <link rel="stylesheet" href="/css/style.css">
   <!-- own style CSS -->
-  <link rel="stylesheet" href="/css/khaleo.css">
-  <link rel="stylesheet" href="/css/huy.css">
+  <link rel="stylesheet" href="/css/custom.css">
 
   <style>
 
