--- a/views/passwordforgot/passwordForgot.hbs
+++ b/views/passwordforgot/passwordForgot.hbs
@@ -6,7 +6,6 @@
     if (info) alert(info)
 </script>
 <section class="banner_part login-section">
-    <link rel="stylesheet" href="css/khaleo.css">
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
@@ -20,10 +19,13 @@
 
             <div class="col-lg-5 signupform">
                 <div class="banner_img d-none d-lg-block forgotPasswordArea">
-                    <img class="img-lock" alt="">
-                    <h3>Forgot Password?</h3>
-                    <h6>You can reset password here</h6>
-                    <form class="inputform"  method="POST">
+
+                    <form class="inputform" method="POST">
+                        <div class="passwordTitle"> <img class="img-lock" alt="">
+                            <h3>Forgot Password?</h3>
+                            <h6>You can reset password here</h6>
+                        </div>
+
                         <div class="mt-10">
                             <input type="email" name="email" placeholder="Input your email" onfocus="this.placeholder"
                                 onblur="this.placeholder" required class="single-input">
@@ -33,9 +35,9 @@
                                 <a href="/login" style=""><span>Back</span></a>
                             </button>
                             <button href="/forgotPassword" type="submit" class="btn_2 banner_btn_2 signupBtn"
-                            value="Send Link">Send Link</button>
+                                value="Send Link">Send Link</button>
                         </div>
-                        
+
                     </form>
                 </div>
             </div>
