--- a/views/register/register.hbs
+++ b/views/register/register.hbs
@@ -2,7 +2,6 @@
 <!-- banner part start-->
 {{>header user=this.user}}
 <section class="banner_part register-section">
-    <link rel="stylesheet" href="css/khaleo.css">
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
@@ -30,7 +29,7 @@
                         </div>
                         <div class="mt-10">
                             <input type="password" name="confirm_password" id="confirm_password"
-                                placeholder="Confirm Password'" onfocus="this.placeholder = ''"
+                                placeholder="Confirm Password" onfocus="this.placeholder = ''"
                                 onblur="this.placeholder = 'Confirm Password'" onkeyup="checkPass()" required
                                 class="single-input">
                         </div>
