--- a/views/demo/demo.hbs
+++ b/views/demo/demo.hbs
@@ -2,7 +2,6 @@
 <!-- banner part start-->
 {{>header user=this.user}}
 <section class="banner_part register-section">
-    <link rel="stylesheet" href="css/khaleo.css">
     <div class="container">
         <div class="row">
             <div class="row align-items-center">
@@ -11,20 +10,20 @@
                         <div class="banner_text_iner">
                             <h1>Convert your audio file to text now!</h1>
                             <div>
-                                <h3 style="font-size: 3.5em;">Format audio file</h3>
+                                <h4 style="font-size: 3.5em;">Format audio file</h4>
                                 <div style="font-size: 2.5em;">Type: .wav</div>
                                 <div style="font-size: 2.5em;">Bandwidth: 16000 Hz</div>
 
                             </div>
-                            {{#if user}}
+                            {{!-- {{#if user}}
                             {{else}}
                             <a href="/register" class="btn_2 banner_btn_2">Sign up for free </a>
-                            {{/if}}
+                            {{/if}} --}}
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5" style="text-align: center;">
-                    <form action="/demo" enctype="multipart/form-data" method="POST">
+                <div class="col-lg-5" style="height: 700px ;text-align: center">
+                    <form class="inputFileForm" action="/demo" enctype="multipart/form-data" method="POST">
 
 
 
@@ -32,18 +31,16 @@
                             <input class="btn_2 banner_btn_2" type="file" id="myFile" name="myFile" accept="audio/wav"
                                 required>
 
-                            <input type="text" name="apiKey" style="width: 100%" placeholder="Please input your API KEY"
-                                required />
+
                         </label>
                         <div>
                             <input type="submit" class="btn_2 banner_btn_1" value="convert" /><br>
                         </div>
-                    </form>
-                    <div class="form-group">
                         <h3>{{descriptionFile}}</h3>
                         <textarea readonly="true" class="form-control rounded-0" id="Textarea" rows="7"
                             value={{jsonData}}>{{jsonData}}</textarea>
-                    </div>
+                    </form>
+
                     <div>
                         <input id="download" type="button" class="btn_2 banner_btn_1" onclick="clickHandler()"
                             value="Download" /><br>
