--- a/views/packages/packages.hbs
+++ b/views/packages/packages.hbs
@@ -7,8 +7,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner text-center">
-                    <div class="breadcrumb_iner_item">
-                        <h2>Price</h2>
+                    <div style="height:100px" class="breadcrumb_iner_item">
+                        <h2>Packages Price</h2>
                     </div>
                 </div>
             </div>
