--- a/views/passwordforgot/newPassword.hbs
+++ b/views/passwordforgot/newPassword.hbs
@@ -3,11 +3,10 @@
 {{>header user=this.user}}
 <script>
     let info = "{{ this.info.message }}"
-    
+
     if (info) alert(info)
 </script>
 <section class="banner_part login-section">
-    <link rel="stylesheet" href="css/khaleo.css">
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
@@ -21,39 +20,40 @@
 
             <div class="col-lg-5 signupform">
                 <div class="banner_img d-none d-lg-block forgotPasswordArea">
-                    <img class="img-smile" alt="">
-                    <h3>Input your new password</h3>
-                    <h6>You can reset password here</h6>
+
                     <form class="inputform" action="/recoverPassword" method="POST">
+                        <div class="passwordTitle">
+                            <img class="img-smile" alt="">
+                            <h3>Input your new password</h3>
+                            <h6>You can reset password here</h6>
+                        </div>
                         {{#if user}}
-                            <div class="mt-10">
+                        <div class="mt-10">
                             <input type="password" name="old_password" id="old_password" placeholder="Old Password"
-                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Old Password'" required minlength="6"
-                                class="single-input">
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Old Password'" required
+                                minlength="6" class="single-input">
                         </div>
                         {{else}}
                         <div class="mt-10">
-                            <input readonly="true" value="{{email}}" type="text" name="email" id="email" 
-                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required minlength="6"
-                                class="single-input">
+                            <input readonly="true" value="{{email}}" type="text" name="email" id="email"
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required
+                                minlength="6" class="single-input">
                         </div>
-                         {{/if}}
+                        {{/if}}
 
                         <div class="mt-10">
                             <input type="password" name="password" id="password" placeholder="Password"
-                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required minlength="6"
-                                class="single-input">
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required
+                                minlength="6" class="single-input">
                         </div>
                         <div class="mt-10">
-                            <input type="password"  id="confirm_password"
-                                placeholder="Confirm Password" onfocus="this.placeholder = ''"
-                                onblur="this.placeholder = 'Confirm Password'"
+                            <input type="password" id="confirm_password" placeholder="Confirm Password"
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'"
                                 onkeyup="checkPass()" required class="single-input">
-                        <div class="group-social-button">
-                            <button type="submit" class="btn_2 banner_btn_2 signupBtn"
-                            value="OK">OK</button>
-                        </div>
-                        
+                            <div class="group-social-button">
+                                <button type="submit" class="btn_2 banner_btn_2 signupBtn" value="OK">OK</button>
+                            </div>
+
                     </form>
                 </div>
             </div>
@@ -64,14 +64,12 @@
     function checkPass() {
         var pass1 = document.getElementById('password');
         var pass2 = document.getElementById('confirm_password');
-        if (pass1.value != pass2.value){
+        if (pass1.value != pass2.value) {
             pass2.setCustomValidity("Confirm password did't match.");
         }
-        else{
+        else {
             pass2.setCustomValidity("");
         }
     }
 </script>
-{{>footer}}
-<!-- banner part start-->
 {{>footer}}
