update generate OTP and send to email when click buy package

--- a/views/packages/packages.hbs
+++ b/views/packages/packages.hbs
@@ -40,7 +40,7 @@
                         <li>{{limitNumberOfReq}} Request Limit</li>
                         <li>24/7 Support</li>
                     </ul>
-                    <a href="#" class="btn_1">Buy</a>
+                    <a href="/packages/buy?id={{id}}"  class="btn_1">Buy</a>
                 </div>
             </div>
             {{/each}}
